# SRT-downloader

./: .gitignore  MANIFEST.in  README.md  fetch_srt_subtitles.py  fetch_srt_subtitles.spec  install.ps1  install.sh  pyproject.toml  requirements.txt  srt-downloader.yaml.example
.github/workflows/: build-release.yml
